[project]
name = "analysund"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "jupyterlab>=4.2.2",
    "h5py>=3.11.0",
    "matplotlib>=3.9.1.post1",
    "pandas>=2.2.2",
    "python-dotenv>=1.0.1",
    "polars>=1.19.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.6.1",
    "pyarrow>=20.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "none"}


[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
]
[tool.pdm]
distribution = false
